[gd_scene load_steps=11 format=3 uid="uid://tiga6duwpsat"]

[ext_resource type="Script" uid="uid://ckyceknvserjl" path="res://Scripts/Objectives/MemoryExtractObjective.gd" id="1_evbu2"]
[ext_resource type="Texture2D" uid="uid://dymtvehsdpmr2" path="res://Art/UI/SpawnCircle.png" id="1_yjdfc"]
[ext_resource type="PackedScene" uid="uid://cptds02dqtiqe" path="res://Prefabs/MemoryDrive.tscn" id="2_yjdfc"]
[ext_resource type="AudioStream" uid="uid://dj7dgs5sa8knp" path="res://Audio/SFX/pickup.wav" id="4_lbg07"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tc1q2"]
radius = 88.0

[sub_resource type="Animation" id="Animation_yjdfc"]
resource_name = "anim"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_evbu2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tc1q2"]
_data = {
&"RESET": SubResource("Animation_evbu2"),
&"anim": SubResource("Animation_yjdfc")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_drrns"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lbg07"]
bg_color = Color(1, 1, 1, 1)

[node name="MemoryExtractObjective" type="Area2D" groups=["Objective"]]
collision_mask = 2
script = ExtResource("1_evbu2")

[node name="TextureRect" type="Sprite2D" parent="."]
texture = ExtResource("1_yjdfc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_tc1q2")

[node name="MemoryDrive" parent="." instance=ExtResource("2_yjdfc")]

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(200, 0)
offset_left = -98.0
offset_top = -60.0
offset_right = 102.0
offset_bottom = -37.0
text = "EXTRACT DATA"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tc1q2")
}
speed_scale = 0.5

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="PollTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="ProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(100, 0)
offset_left = -49.0
offset_top = -37.0
offset_right = 51.0
offset_bottom = -27.0
theme_override_styles/background = SubResource("StyleBoxFlat_drrns")
theme_override_styles/fill = SubResource("StyleBoxFlat_lbg07")
max_value = 1.0
show_percentage = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_lbg07")
pitch_scale = 0.6

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PollTimer" to="." method="_on_poll_timer_timeout"]
